Proceed whole execution for greenwave trigger
Declarative syntax used for greenwave trigger.
Merged greenwave trigger with image-promotion

--- a/openshift/pipelines/jobs/waiverdb-greenwave-promote-to-stage.env
+++ b/openshift/pipelines/jobs/waiverdb-greenwave-promote-to-stage.env
@@ -3,4 +3,4 @@ SOURCE_CONTAINER_REPO=quay.io/factory2/waiverdb
 TARGET_TAG=stage
 DECISION_CONTEXT_REGEX=c3i_promote_dev_to_stage
 MESSAGING_TOPIC=Consumer.rh-jenkins-ci-plugin.c3i-waiverdb-promote-to-stage.VirtualTopic.eng.greenwave.decision.update
-IMAGE_PROMOTION_JOB=waiverdb-promoting-to-stage
+PROMOTING_DESTINATIONS=quay.io/factory2/waiverdb
