--- a/openshift/pipelines/templates/waiverdb-greenwave-trigger.yaml
+++ b/openshift/pipelines/templates/waiverdb-greenwave-trigger.yaml
@@ -32,9 +32,28 @@ parameters:
 - name: TARGET_TAG
   displayName: Tag name to promote the image to
   required: true
-- name: IMAGE_PROMOTION_JOB
-  displayName: Downstream image promotion job to trigger
+- name: CONTAINER_REGISTRY_CREDENTIALS
+  displayName: Secret name of container registries used for pulling and pushing images
+  value: factory2-pipeline-registry-credentials
+  required: false
+- name: TAG_INTO_IMAGESTREAM
+  displayName: Whether to tag the image into an ImageStream
+  value: "false"
   required: true
+- name: PROMOTING_DESTINATIONS
+  displayName: Comma seperated list of container repositories (without tags) to which the image will be promoted
+  description: OpenShift registries must be prefixed with 'atomic:'
+  required: false
+  value: "quay.io/factory2/waiverdb"
+- name: DEST_IMAGESTREAM_NAME
+  displayName: Name of the ImageStream to be tagged
+  required: false
+  value: waiverdb
+- name: DEST_IMAGESTREAM_NAMESPACE
+  displayName: Namespace of the ImageStream to be tagged
+  description: Leaving blank means using the same namespace as the pipeline build
+  required: false
+  value: waiverdb-stage
 - name: MESSAGING_PROVIDER
   displayName: Name of the JMS messaging provider
   value: Red Hat UMB
@@ -85,6 +104,16 @@ objects:
           value: "${WAIVERDB_GIT_REF}"
         - name: OPENSHIFT_CLOUD_NAME
           value: "${OPENSHIFT_CLOUD_NAME}"
+        - name: PROMOTING_DESTINATIONS
+          value: "${PROMOTING_DESTINATIONS}"
+        - name: CONTAINER_REGISTRY_CREDENTIALS
+          value: "${CONTAINER_REGISTRY_CREDENTIALS}"
+        - name: TAG_INTO_IMAGESTREAM
+          value: "${TAG_INTO_IMAGESTREAM}"
+        - name: DEST_IMAGESTREAM_NAME
+          value: "${DEST_IMAGESTREAM_NAME}"
+        - name: DEST_IMAGESTREAM_NAMESPACE
+          value: "${DEST_IMAGESTREAM_NAMESPACE}"
         - name: JENKINS_AGENT_IMAGE
           value:  "${JENKINS_AGENT_IMAGE}"
         - name: JENKINS_AGENT_SERVICE_ACCOUNT
