--- a/openshift/pipelines/jobs/waiverdb-trigger-on-latest-tag.env
+++ b/openshift/pipelines/jobs/waiverdb-trigger-on-latest-tag.env
@@ -1,4 +1,4 @@
 NAME=waiverdb-trigger-on-latest-tag
 MESSAGING_TOPIC=Consumer.rh-jenkins-ci-plugin.c3i-waiverdb-trigger-on-latest-tag.VirtualTopic.eng.repotracker.container.tag.>
-TEST_JOB_NAME=waiverdb-stage-integration-test
+ENVIRONMENT=stage
 TRACKED_TAG=latest
