Fix route to the service for tests
Signed-off-by: Lukas Holecek <hluk@email.cz>

--- a/openshift/waiverdb-test-template.yaml
+++ b/openshift/waiverdb-test-template.yaml
@@ -172,7 +172,7 @@ objects:
 - apiVersion: v1
   kind: Route
   metadata:
-    name: "waiverdb-test-web"
+    name: "waiverdb-test-${TEST_ID}-web"
     labels:
       environment: "test-${TEST_ID}"
       app: waiverdb
