C3I: Trigger tower promotion jobs in c3i workflows
JIRA: RHELWF-726
Signed-off-by: Lukas Holecek <hluk@email.cz>

--- a/openshift/pipelines/c3i-role-vars.yml
+++ b/openshift/pipelines/c3i-role-vars.yml
@@ -21,3 +21,7 @@ c3i_lib_branch: master
 # Allow prod image promotion based on waiverdb-deployments-allowed flag state.
 c3i_semaphore_custom_flags:
   - waiverdb-deployments-allowed
+
+c3i_tower_template_id_dev: 568
+c3i_tower_template_id_stage: 570
+c3i_tower_template_id_prod: 571
