Use fedora registry intead of docker hub
Automation is having issue with pull rate limit of docker hub. Switching
to fedora project registry.

https://www.docker.com/increase-rate-limit

--- a/openshift/containers/jenkins-slave/Dockerfile
+++ b/openshift/containers/jenkins-slave/Dockerfile
@@ -2,7 +2,7 @@
 # https://github.com/jenkinsci/docker-jnlp-slave/blob/master/Dockerfile
 # https://github.com/jenkinsci/docker-slave/blob/master/Dockerfile
 
-FROM fedora:32
+FROM registry.fedoraproject.org/fedora:32
 LABEL \
     org.opencontainers.image.title="Jenkins agent image for WaiverDB" \
     org.opencontainers.image.description="Jenkins slave for WaiverDB dev tests" \
