--- a/openshift/pipelines/c3i-role-vars.yml
+++ b/openshift/pipelines/c3i-role-vars.yml
@@ -22,6 +22,8 @@ c3i_lib_branch: master
 c3i_semaphore_custom_flags:
   - waiverdb-deployments-allowed
 
-c3i_tower_template_id_dev: 1701
-c3i_tower_template_id_stage: 1971
-c3i_tower_template_id_prod: 1972
+c3i_tower_template_id_dev: 7550
+c3i_tower_template_id_stage: 7551
+c3i_tower_template_id_prod: 7552
+
+c3i_ocp_namespace: waiverdb-test
