--- a/conf/client.conf.example
+++ b/conf/client.conf.example
@@ -1,7 +1,7 @@
 [waiverdb]
 # Specify OIDC or Kerberos for authentication
 auth_method=OIDC
-api_url=https://waiverdb-web-waiverdb.app.os.fedoraproject.org/api/v1.0
+api_url=https://waiverdb.fedoraproject.org/api/v1.0
 oidc_id_provider=https://id.fedoraproject.org/openidc/
 oidc_client_id=waiverdb-authorizer
 oidc_client_secret=notsecret
