--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,10 +3,17 @@ Flask
 flask-cors
 Flask-Migrate
 Flask-RESTful!=0.3.6
-flask-oidc
-stomp.py
-sphinx < 4
-sphinxcontrib-httpdomain
+gssapi
 prometheus_client
 dogpile.cache
 PyYAML
+
+stomp.py==6.1.0
+cryptography==3.4.6
+
+flask-oidc==1.4.0
+itsdangerous==1.1.0
+
+sphinx
+sphinxcontrib-httpdomain
+markupsafe==1.1.1
