--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = lint,py38,docs
+envlist = lint,py39,docs
 
 # If the user is missing an interpreter, don't fail
 skip_missing_interpreters = True
 
 [testenv]
+basepython = python3.9
 deps =
     -rrequirements.txt
     -rtest-requirements.txt
