Enable GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,py39,docs
+envlist = bandit,lint,py39,docs
 
 # If the user is missing an interpreter, don't fail
 skip_missing_interpreters = True
@@ -15,8 +15,14 @@ commands =
     find -name *.pyc -delete
     py.test {posargs}
 
-[pytest]
-testpaths = tests/
+[testenv:bandit]
+skip_install = true
+deps =
+    bandit
+commands =
+    bandit \
+        --exclude functional-tests,tests \
+        --recursive waiverdb
 
 [testenv:docs]
 changedir = docs
@@ -35,6 +41,9 @@ deps =
     flake8 > 3.0
 commands =
     python -m flake8 {posargs}
+
+[pytest]
+testpaths = tests/
 
 [flake8]
 show-source = True
