--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -112,3 +112,41 @@ jobs:
           # * DL3041 - Specify version with dnf install -y <package>-<version>
           ignore: DL3041
           failure-threshold: warning
+
+  image-build:
+    name: Container Image Build
+    needs: hadolint
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: waiverdb
+      REGISTRY: quay.io/factory2
+      GH_REGISTRY: ghcr.io/${{ github.actor }}
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build Image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
+        with:
+          image: ${{ env.IMAGE_NAME }}
+          tags: >-
+            ${{ github.ref == 'refs/heads/master' && 'latest' || '' }}
+            ${{ github.sha }}
+          containerfiles: Dockerfile
+
+      - name: Log in to the image registry
+        if: github.event_name == 'push' && github.actor != 'dependabot[bot]'
+        uses: redhat-actions/podman-login@v1
+        with:
+          registry: ${{ secrets.REGISTRY_USER && env.REGISTRY || env.GH_REGISTRY }}
+          username: ${{ secrets.REGISTRY_USER || github.actor }}
+          password: ${{ secrets.REGISTRY_PASSWORD || secrets.GITHUB_TOKEN }}
+
+      - name: Push Image
+        if: github.event_name == 'push' && github.actor != 'dependabot[bot]'
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: ${{ secrets.REGISTRY_USER && env.REGISTRY || env.GH_REGISTRY }}
