docs: Always skip the missing dependencies when building docs

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
 [testenv:docs]
 changedir = docs
 deps =
-    -rrequirements.txt
+    -rdocs/requirements.txt
 whitelist_externals =
     mkdir
     rm
