Fix building docs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -16,3 +16,6 @@ itsdangerous==2.0.1
 sphinx
 sphinxcontrib-httpdomain
 markupsafe==2.1.1
+
+# https://github.com/sphinx-contrib/httpdomain/issues/60
+Werkzeug<2.2
