--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,20 @@
 [tox]
 envlist = bandit,lint,py39,docs
-
-# If the user is missing an interpreter, don't fail
-skip_missing_interpreters = True
+isolated_build = True
 
 [testenv]
 basepython = python3.9
-deps =
-    -rrequirements.txt
-    -rtest-requirements.txt
-whitelist_externals =
-    find
+extras =
+    test
 commands =
-    find -name *.pyc -delete
-    py.test {posargs}
+    pytest \
+        --cov-reset \
+        --cov-config=.coveragerc \
+        --cov=waiverdb \
+        --cov-report=term \
+        --cov-report=xml \
+        --cov-report=html \
+        {posargs}
 
 [testenv:bandit]
 skip_install = true
@@ -21,13 +22,15 @@ deps =
     bandit
 commands =
     bandit \
-        --exclude functional-tests,tests \
+        --exclude tests \
         --recursive waiverdb
 
 [testenv:docs]
+# Same Python version as in .readthedocs.yaml
+basepython = python3.8
 changedir = docs
-deps =
-    -rdocs/requirements.txt
+extras =
+    docs
 whitelist_externals =
     mkdir
     rm
@@ -37,8 +40,9 @@ commands=
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  _build/html
 
 [testenv:lint]
+skip_install = true
 deps =
-    flake8 > 3.0
+    flake8
 commands =
     python -m flake8 {posargs}
 
