--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -15,10 +15,10 @@ jobs:
         python-version: ["3.9"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
+          pip install poetry tox tox-gh-actions
 
       - name: Test with tox
         run: tox -e py
@@ -53,6 +53,9 @@ jobs:
           pip3 install --upgrade setuptools
           pip3 install --upgrade coveralls==3.2.0
           coveralls --service=github
+
+      - name: Test building documentation with tox
+        run: tox -e docs
 
   coveralls-finish:
     name: Finish coveralls-python
@@ -75,15 +78,14 @@ jobs:
         tox_env:
           - bandit
           - lint
-          - docs
 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: "3.9"
 
@@ -104,7 +106,7 @@ jobs:
           - Dockerfile
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: hadolint/hadolint-action@v1.5.0
         with:
@@ -122,14 +124,30 @@ jobs:
       IMAGE_NAME: waiverdb
       REGISTRY: quay.io/factory2
       GH_REGISTRY: ghcr.io/${{ github.actor }}
+    strategy:
+      matrix:
+        python-version: ["3.9"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry tox tox-gh-actions podman-compose
+
+      - name: Update the Application Version
+        run: poetry version "$(./get-version.sh)"
 
       - name: Get image tag from git branch
         id: get-image-tag
         run: |
-          export TAG=$(sed 's/[^0-9a-zA-Z\-_.]/__/g' <<< "$GITHUB_REF_NAME") &&
+          export TAG=$(sed 's/[^0-9a-zA-Z_.-]/__/g' <<< "$GITHUB_REF_NAME") &&
           echo "::set-output name=tag::$TAG"
 
       - name: Build Image
@@ -142,6 +160,8 @@ jobs:
             ${{ github.ref == 'refs/heads/master' && 'latest' || '' }}
             ${{ github.sha }}
           containerfiles: Dockerfile
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
 
       - name: Log in to the image registry
         if: github.event_name == 'push' && github.actor != 'dependabot[bot]'
