--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,4 +13,7 @@ sphinx:
 python:
    version: 3.8
    install:
-   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
+     extra_requirements:
+     - docs
