--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,3 @@
-# This is a list of pypi packages to be installed into virtualenv. Alternatively,
-# you can install these as RPMs instead of pypi packages.
-
-fedora_messaging
-Flask
-Flask-RESTful!=0.3.6
-Flask-SQLAlchemy
-flask-cors
-SQLAlchemy==1.4.42
-gssapi
-Flask-Migrate
-
-stomp.py==8.1.0
-cryptography==38.0.1
-
-flask-oidc==1.4.0
-itsdangerous==2.0.1
-
-# Documentation requirements
-sphinx
-sphinxcontrib-httpdomain
-markupsafe==2.1.1
-
-# CLI
-click
-configparser
-openidc-client
-requests-gssapi
-
-# Database
-psycopg2-binary
-
-# Monitoring
-prometheus_client
+wheel==0.37.1
+pip==22.3
+setuptools==65.5.0
