--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -10,17 +10,14 @@ jobs:
   tests:
     name: Unit tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
 
       - name: Install system dependencies
         uses: nick-invision/retry@v2
@@ -53,6 +50,11 @@ jobs:
           pip3 install --upgrade setuptools
           pip3 install --upgrade coveralls==3.2.0
           coveralls --service=github
+
+      - name: Set up Python for documentation build
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
 
       - name: Test building documentation with tox
         run: tox -e docs
@@ -124,17 +126,14 @@ jobs:
       IMAGE_NAME: waiverdb
       REGISTRY: quay.io/factory2
       GH_REGISTRY: ghcr.io/${{ github.actor }}
-    strategy:
-      matrix:
-        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
 
       - name: Install dependencies
         run: |
