--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = ">=3.8,<3.11"
 
 flask = "^2.2.5"
 flask-oidc = "^1.4.0"
@@ -81,6 +81,8 @@ sphinxcontrib-httpdomain = {version = "^1.8.1", optional = true}
 markupsafe = {version = "==2.1.2", optional = true}
 # https://github.com/sphinx-contrib/httpdomain/issues/60
 Werkzeug = {version = "<2.3", optional = true}
+pydantic = "^1.10.7"
+Flask-Pydantic = "^0.11.0"
 
 [tool.poetry.extras]
 test = [
