--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ python = ">=3.8,<3.11"
 
 flask = "^2.2.5"
 flask-oidc = "^1.4.0"
-Flask-RESTful = "^0.3.9"
 Flask-SQLAlchemy = "^3.0.3"
 Flask-Cors = "^4.0.0"
 Flask-Migrate = "^4.0.4"
@@ -83,6 +82,7 @@ markupsafe = {version = "==2.1.3", optional = true}
 Werkzeug = {version = "<2.4", optional = true}
 pydantic = "^1.10.7"
 Flask-Pydantic = "^0.11.0"
+flask-restx = "^1.1.0"
 
 [tool.poetry.extras]
 test = [
