--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -57,6 +57,9 @@ jobs:
         with:
           python-version: "3.8"
 
+      - name: Test building documentation with tox
+        run: tox -e docs
+
   coveralls-finish:
     name: Finish coveralls-python
     needs: tests
