--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,25 +1,23 @@
-# .readthedocs.yaml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
+---
 version: 2
 
-# Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+  configuration: docs/conf.py
 
 build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
   apt_packages:
-  - libkrb5-dev
-  - libldap2-dev
-  - libsasl2-dev
+    - libkrb5-dev
+    - libldap2-dev
+    - libsasl2-dev
 
-# Optionally set the version of Python and requirements required to build your docs
 python:
-   version: 3.8
-   install:
-   - method: pip
-     path: .
-     extra_requirements:
-     - docs
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
