--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,11 +78,11 @@ mock = {version = "^5.0.2", optional = true}
 sphinx = {version = "^7.1.1", optional = true}
 sphinxcontrib-httpdomain = {version = "^1.8.1", optional = true}
 markupsafe = {version = "==2.1.3", optional = true}
-# https://github.com/sphinx-contrib/httpdomain/issues/60
-Werkzeug = {version = "<3.1", optional = true}
 pydantic = "^1.10.7"
 Flask-Pydantic = "^0.11.0"
 flask-restx = "^1.1.0"
+
+Werkzeug = "^3.0.1"
 
 [tool.poetry.extras]
 test = [
