--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ Flask-SQLAlchemy = "^3.1.1"
 Flask-Cors = "^4.0.0"
 Flask-Migrate = "^4.0.5"
 itsdangerous = {version = "==2.0.1", optional = true}
+# causes a problem with OIDC callback (returns 500)
+Werkzeug = {version = "<3.0.1", optional = true}
 
 gssapi = "^1.8.3"
 python-ldap = "^3.4.3"
@@ -81,8 +83,6 @@ markupsafe = {version = "==2.1.3", optional = true}
 pydantic = "^1.10.7"
 Flask-Pydantic = "^0.11.0"
 flask-restx = "^1.1.0"
-
-Werkzeug = "^3.0.1"
 
 [tool.poetry.extras]
 test = [
