--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,13 +39,13 @@ include = [
 python = ">=3.8,<3.12"
 
 flask = "^2.2.5"
-flask-oidc = "^1.4.0"
+flask-oidc = "^2.1.1"
 Flask-SQLAlchemy = "^3.1.1"
 Flask-Cors = "^4.0.0"
 Flask-Migrate = "^4.0.5"
 itsdangerous = {version = "==2.0.1", optional = true}
 # causes a problem with OIDC callback (returns 500)
-Werkzeug = {version = "<3.0.1", optional = true}
+Werkzeug = "^3.0.1"
 
 gssapi = "^1.8.3"
 python-ldap = "^3.4.3"
