--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 envlist = bandit,lint,py3,docs
-isolated_build = True
 
 [testenv]
 extras =
@@ -25,8 +24,6 @@ commands =
         --recursive waiverdb
 
 [testenv:docs]
-# Same Python version as in .readthedocs.yaml
-basepython = python3.11
 changedir = docs
 extras =
     docs
@@ -51,7 +48,7 @@ testpaths = tests/
 [flake8]
 show-source = True
 max-line-length = 100
-exclude = .git,.tox,dist,*egg,env_waiverdb,docs,conf,waiverdb/migrations
+exclude = .git,.tox,.venv,dist,*egg,env_waiverdb,docs,conf,waiverdb/migrations
 
 # E124: closing bracket does not match visual indentation
 # W503 line break before binary operator
