--- a/docker/dev.env
+++ b/docker/dev.env
@@ -3,3 +3,4 @@ SECRET_KEY=waiverdb
 WAIVERDB_CONFIG=/etc/waiverdb/settings.py
 WAIVERDB_TEST_URL=http://waiverdb:5004/
 PYTEST_ADDOPTS=-o cache_dir=/tmp/.pytest_cache
+PYTHONPATH=/code
