--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,25 @@ commands =
         --cov-report=term \
         --cov-report=xml \
         --cov-report=html \
+        --ignore=functional-tests \
+        {posargs}
+
+[testenv:functional]
+skip_install = true
+commands_pre =
+    poetry install --only=main --extras=test --extras=functional-test
+setenv =
+    WAIVERDB_TEST_URL=http://127.0.0.1:5004
+    KEYCLOAK_TEST_URL=http://127.0.0.1:8080
+    MOZ_HEADLESS=1
+allowlist_externals =
+    poetry
+    docker/healthcheck.sh
+commands =
+    docker/healthcheck.sh
+    pytest \
+        --driver=Firefox \
+        functional-tests/ \
         {posargs}
 
 [testenv:bandit]
@@ -54,7 +73,7 @@ testpaths = tests/
 [flake8]
 show-source = True
 max-line-length = 100
-exclude = .git,.tox,dist,*egg,env_waiverdb,docs,conf,waiverdb/migrations
+exclude = .git,.tox,.venv,dist,*egg,env_waiverdb,docs,conf,waiverdb/migrations
 
 # E124: closing bracket does not match visual indentation
 # W503 line break before binary operator
