--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,50 @@ services:
     env_file: ["docker/dev.env"]
     command: ["bash", "-c", "/start.sh"]
     volumes:
-      - ./:/code:ro,Z
-      - ./docker/home:/home/dev:Z
+      - ./:/code:ro,z
+      - ./docker/home:/home/dev:z
       - ./docker/dev-command.sh:/start.sh:ro,z
       - ./docker/settings.py:/etc/waiverdb/settings.py:ro,z
       - ./docker/client_secrets.json:/etc/secret/client_secrets.json:ro,z
-    ports:
-      - 127.0.0.1:5004:5004
     user: '0'
     depends_on:
-      - waiverdb-db
+      waiverdb-db:
+        condition: service_healthy
+      keycloak:
+        condition: service_healthy
+    network_mode: service:keycloak
+    healthcheck: &dev-healthcheck
+      test: >-
+        /code/docker/docker-entrypoint.sh python -c 'import requests;
+        requests.get("http://127.0.0.1:8080/health/live").raise_for_status();
+        requests.get("http://127.0.0.1:5004/healthcheck").raise_for_status();
+        '
+      interval: 1s
+      timeout: 5s
+      retries: 30
 
   waiverdb-db:
     image: postgres:14.7-alpine
     restart: always
     env_file: ["docker/waiverdb-db.env"]
+    healthcheck:
+      <<: *dev-healthcheck
+      test: "pg_isready -U postgres"
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.2
+    ports:
+      - 127.0.0.1:5004:5004
+      - 127.0.0.1:8080:8080
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    command:
+      - start-dev
+      - --health-enabled=true
+      - --import-realm
+    volumes:
+      - ./docker/keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json:ro,z
 
 networks:
   default:
