--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,13 +39,12 @@ include = [
 python = ">=3.8,<3.13"
 
 flask = "^2.2.5"
-flask-oidc = "^1.4.0"
+flask-oidc = "^2.2.0"
+flask-session = ">=0.6.0"
 Flask-SQLAlchemy = "^3.1.1"
 Flask-Cors = "^4.0.1"
 Flask-Migrate = "^4.0.5"
 itsdangerous = {version = "==2.0.1", optional = true}
-# causes a problem with OIDC callback (returns 500)
-Werkzeug = {version = "<3.0.0", optional = true}
 
 gssapi = "^1.8.3"
 python-ldap = "^3.4.3"
