Fix installing dependencies for tox
Also removes building docs from CI which is already handled by
readthedocs even on pull requests.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
 envlist = bandit,lint,py3,docs
-isolated_build = True
+requires =
+    poetry
 
 [testenv]
-extras =
-    test
+allowlist_externals = poetry
+skip_install = true
+no_package = true
+
+[testenv:py3]
+commands_pre =
+    poetry install --only=main --extras=test
 commands =
     pytest \
         --cov-reset \
@@ -16,7 +22,6 @@ commands =
         {posargs}
 
 [testenv:bandit]
-skip_install = true
 deps =
     bandit
 commands =
@@ -25,12 +30,11 @@ commands =
         --recursive waiverdb
 
 [testenv:docs]
-# Same Python version as in .readthedocs.yaml
-basepython = python3.11
 changedir = docs
-extras =
-    docs
+commands_pre =
+    poetry install --only=main --extras=docs
 allowlist_externals =
+    poetry
     mkdir
     rm
 commands=
@@ -39,7 +43,6 @@ commands=
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  _build/html
 
 [testenv:lint]
-skip_install = true
 deps =
     flake8
 commands =
