--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -34,12 +34,10 @@ jobs:
             libsasl2-dev
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry tox tox-gh-actions
+        run: python -m pip install tox
 
       - name: Test with tox
-        run: tox -e py
+        run: python -m tox -e py3
 
       - name: Run coveralls-python
         env:
@@ -51,14 +49,6 @@ jobs:
           pip3 install --upgrade setuptools
           pip3 install --upgrade coveralls==3.2.0
           coveralls --service=github
-
-      - name: Set up Python for documentation build
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Test building documentation with tox
-        run: tox -e docs
 
   coveralls-finish:
     name: Finish coveralls-python
@@ -139,7 +129,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install poetry tox tox-gh-actions podman-compose
+          pip install poetry podman-compose
 
       - name: Update the Application Version
         run: poetry version "$(./get-version.sh)"
