--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -126,10 +126,23 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install system dependencies
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          retry_wait_seconds: 30
+          max_attempts: 3
+          command: >-
+            sudo apt-get update
+            && sudo apt-get install
+            libkrb5-dev
+            libldap2-dev
+            libsasl2-dev
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install poetry podman-compose
+          pip install poetry podman-compose tox
 
       - name: Update the Application Version
         run: poetry version "$(./get-version.sh)"
@@ -175,11 +188,17 @@ jobs:
           echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list &&
           curl -L "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/Release.key" | sudo apt-key add - &&
           sudo apt-get -y update &&
-          sudo apt-get -y install firefox &&
+          sudo apt-get -y install chromium-browser &&
           sudo apt-get -y -o Dpkg::Options::="--force-overwrite" install podman
 
       - name: Test Image
         run: |
-          podman-compose up -d &&
-          tox -e functional -- --no-cov functional-tests &&
-          podman-compose down
+          .github/run-functional-tests.sh "${{ steps.build-image.outputs.image }}:${{ github.sha }}"
+
+      - name: Upload pytest logs
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: pytest-logs
+          path: /tmp/pytest-of-runner/
+          retention-days: 14
